# permutations_library

./: CMakeLists.txt  README.md
benchmarks/: comparison_benchmark.c
examples/: iterator_example.c
include/: iterative_algorithms  iterative_algorithms.h  iterative_utils.h  optimized_algorithms.h  permutation_core.h  permutation_types.h  permutations.h  recursive_algorithms.h
src/: main.c
src/algorithms/core/: adaptive.c  benchmark.c  iterator.c  testing.c  unified_interface.c  visualization.c
src/algorithms/iterative/: factorial_system.c  inversion_table.c  narayana.c  plus_one.c  reverse_narayana.c
src/algorithms/optimized/: binary_masks.c  cycle_leader.c  heap.c  johnson_trotter.c  minimal_change.c  pseudo_lexicographic.c
src/algorithms/recursive/: backtrack.c  constraints.c  lexicographic.c  multiset.c  recursive_swap.c
src/core/: iterative_utils.c  memory_pool.c  utils.c
src/tests/: correctness_tests.c  property_tests.c  stress_tests.c  unit_tests.c
src/tests/tests iterative/: test_factorial_system.c  test_inversion_table.c  test_narayana.c  test_plus_one.c  test_reverse_narayana.c
